Version 1.10.7+dev:
 * Add-ons client:
   * Fixed invalid file size data from the server crashing the client on the
     network transfer progress dialog (bug #20893).
 * Add-ons server:
   * Implemented read-only mode option (read_only boolean attribute in
     server config WML, defaults to "no").
   * Fixed mishandling of inaccessible add-on packs resulting in multiple data
     conversion errors and stalling clients (bug #20893).
 * Campaigns:
   * Heir to the Throne:
     * Fixed Konrad's dying words event.
   * The Rise of Wesnoth:
     * Fix bug #19427: Spawned units rise in cave wall in Temple of the Deep
   * The South Guard:
     * S6a: fix ogre's last breath message.
 * Language and i18n:
   * Updated translations: British English, Chinese (Traditional), German,
     Greek, Indonesian, Italian, Japanese, Korean, Scottish Gaelic, Vietnamese
 * Miscellaneous and bug fixes:
   * Fixed pofix.py to function with python-3.2
   * Fixed sound sources removed while the sound effects volume is zero
     (either in Preferences -> Sound or through the [volume] WML action)
     persisting and escaping the sound source management code (bug #21426).
   * Fixed wmlindent and wmltools.py to not interpret Pango hexadecimal
     color codes as the start of a comment.
   * Fixed: Compilation with CLang 3.2 and libc++.
   * Fixed bug #20876: A segfault in cut_surface.
   * Fix bug #22042: filesystem content disclosure issue affecting Lua APIs

Version 1.10.7:
 * Add-ons server:
   * Restricted names (not titles) for newly uploaded add-ons to ASCII hyphens,
     underlines, and alphanumerical characters. Previously uploaded add-ons
     are exempt from this change.
 * Graphics:
   * New portraits for HttT
 * Language and i18n:
   * Updated translations: Chinese (Traditional), French, Galician, Indonesian,
     Japanese, Old English, Polish, Portuguese, Portuguese (Brazil), Russian,
     Scottish Gaelic, Vietnamese
 * Networking: