@@ -1,4 +1,6 @@
 Version 1.10.7+dev:
+ * Security fixes:
+   * Disallowed inclusion of .pbl files from WML (bug #23504).
  * Add-ons client:
    * Fixed invalid file size data from the server crashing the client on the
      network transfer progress dialog (bug #20893).
